1. LF로 변경 2. grpc 코드 수정