@@ -16,7 +16,6 @@ MAIN_CLASS="com.xcurenet.logvault.tool.cli.ToolCLI"
 
 JAVA_OPTS=(
   "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED"
-  "--add-opens=java.base/sun.misc=ALL-UNNAMED"
   "--add-opens=java.base/java.lang=ALL-UNNAMED"
   "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED"
   "-Djava.security.egd=file:/dev/./urandom"
